{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "52769573-12c1-4f8d-b01e-39bf8612c523",
            "actions": [
                {
                    "name": "Fire",
                    "type": "Value",
                    "id": "613a5ab0-922a-4438-8a5d-890ab9208419",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.1,pressPoint=1)",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveView",
                    "type": "Value",
                    "id": "11cb6490-c287-4f57-9570-9206744f8af7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "ccb97555-567d-4016-ae52-dd9b2ebb814a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "BulletChangeLeft",
                    "type": "Value",
                    "id": "60bb9ac3-e644-42f6-ac80-a73d05727023",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "BulletChangeRight",
                    "type": "Value",
                    "id": "28e81b56-3b8f-48ad-a74b-67a3780b0cad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fa4ebf8d-12b8-4649-8f2f-2c0c1754cf7f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6aaa459c-7330-4ad7-b2e5-6d7ebaed57e7",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "7773fd76-6737-405b-9e0a-1985783ac04e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveView",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "59d5f877-fa4e-4ae1-abe6-775c73dff271",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveView",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "db8eacc1-d7e9-4450-91ee-ab2867fe9faf",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveView",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ad59037f-7f73-4ffd-a119-e224070fcfc2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveView",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2a276e84-a35f-49dc-a4d7-b4bbe10e2ff7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveView",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5498b6ef-d54c-48dc-92f4-bcbd0e2b8635",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BulletChangeLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce921e88-11c8-4fe5-ac82-0fe8c118d719",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BulletChangeRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}